--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -26,7 +26,7 @@
     <a href="#" class="button" id="downloadSelection">Download selected</a>
   </div>
   <div id="spinner"></div>
-  <script type="application/javascript" src="../browser-polyfill.min.js"></script>
+      <!-- browser-polyfill.min.js removed - using native Chrome APIs -->
   <script type="application/javascript" src="lib/codemirror.js"></script>
   <script type="application/javascript" src="lib/modes/markdown/markdown.js"></script>
   <script type="application/javascript" src="popup.js"></script>
